# crypto-converter

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  run.py
converter/adapters/inbound/api/: app.py  error_handler.py
converter/adapters/inbound/api/dependencies/: __init__.py  container.py  db.py  services.py
converter/adapters/inbound/api/routes/: conversion.py  health.py
converter/adapters/inbound/api/schemas/: conversion.py  error.py  health.py
converter/adapters/inbound/consumer/: quote_consumer.py
converter/adapters/outbound/: rate_source.py
converter/adapters/outbound/persistence/redis/: mapper.py  models.py  quote_repository.py  quote_writer.py
converter/adapters/outbound/persistence/repositories/: composite_quote_repository.py  composite_quote_writer.py
converter/adapters/outbound/persistence/sqlalchemy/: mapper.py  models.py  quote_repository.py  quote_writer.py
converter/app/commands/: store_quotes.py
converter/app/ports/outbound/: quote_repository.py
converter/app/queries/: get_conversion.py
converter/domain/exceptions/: conversion.py  quote.py  quote_provider.py
converter/domain/models/: __init__.py  quote.py
converter/domain/services/: __init__.py  conversion_service.py  precision_service.py  quote_freshness_service.py
converter/domain/services/factory/: __init__.py  amounts_factory.py  rates_factory.py
converter/domain/values/: __init__.py  amount.py  currency.py  pair.py  quote_age.py  rate.py  timestamp_utc.py
converter/shared/config/: settings.py
converter/shared/di/: __init__.py  container.py
converter/shared/logging/: __init__.py
converter/shared/observability/: __init__.py  metrics.py  tracing.py
converter/shared/utils/: scheduler.py
docker/app/: Dockerfile
docker/db-setup/: Dockerfile  entrypoint.sh
docker/db-setup/scripts/: 01-create-users-and-database.sql  02-setup-extensions.sql  03-create-tables-and-partitions.sql  04-setup-permissions.sql  05-setup-cron-jobs.sql
docker/open-telemetry-collector/: open-telemetry-collector-config.yaml
docker/postgres/: Dockerfile  init-pg-cron.sh
docs/: api_reference.md  architecture.md
scripts/: test.sh
tests/: conftest.py
tests/integration/api/: test_conversion_api.py  test_error_handler.py  test_health_api.py
tests/integration/infra/: conftest.py  test_conversion_api_e2e.py  test_postgres_quote_repository_e2e.py  test_redis_quote_repository_e2e.py
tests/unit/adapters/inbound/consumers/: test_quote_consumer.py
tests/unit/adapters/outbound/persistence/redis/: test_mapper.py  test_models.py  test_quote_repository.py  test_quote_writer.py
tests/unit/adapters/outbound/persistence/repositories/: test_composite_repository.py  test_composite_writer.py
tests/unit/adapters/outbound/persistence/sqlalchemy/: test_mapper.py  test_quote_repository.py  test_quote_writer.py
tests/unit/app/commands/: test_store_quotes_command_handler.py
tests/unit/app/queries/: test_get_conversion_query_handler.py
tests/unit/domain/models/: test_quote.py
tests/unit/domain/services/: test_conversion_service.py  test_precision_service.py  test_quote_freshness_service.py
tests/unit/domain/values/: test_amount.py  test_currency.py  test_pair.py  test_quote_age.py  test_rate.py  test_timestamp_utc.py
tests/unit/shared/config/: test_settings.py
tests/unit/shared/utils/: test_scheduler.py
